Tue Dec 11 2001  Vitezslav Samel <samel@mail.cz>
	* configure.ac, path.c:
	include <limits.h> if available to get PATH_MAX

Sun Dec 09 2001  Vitezslav Samel <samel@mail.cz>
	* b.c, bw.c, cmd.c, hash.c, help.c, kbd.c, macro.c, menu.c, pw.c,
	queue.c, qw.c, rc.c, scrn.c, tab.c, termcap.c, tty.c, tw.c, ufile.c,
	uformat.c, uisrch.c, umath.c, undo.c, usearch.c, utils.c, utils.h,
	va.c, vfile.c, vs.c, w.c:
	prepare memory allocation functions (change (m|re|c)alloc() and free()
	into joe_(m|re|c)alloc() and joe_free()) in the utils.c for further
	checking

Sun Dec 09 2001  Vitezslav Samel <samel@mail.cz>
	* b.c, cmd.c, dir.c, hash.c, hash.h, pw.c, pw.h, rc.c, tab.c, tab.h,
	uedit.c, uedit.h, ufile.c, uisrch.c, uisrch.h, umath.c, umath.h, undo.c,
	ushell.c, utag.c, w.c:
	change function declaration "void a(P * p)" to "void a(P *p)" (when
	using GNU indent we must use -Ttype to achieve this behaviour)

Sat Dec 08 2001  Vitezslav Samel <samel@mail.cz>
	* bw.c, scrn.c, scrn.h, uedit.c, w.c:
	change xlat macro into xlat(int *, char *) function;
	change indentation of xlat[ac] tables

Sat Dec 08 2001  Vitezslav Samel <samel@mail.cz>
	* joerc.in:
	turn off asis (setlocale(LC_CTYPE) takes care of it);
	turn off baudrate (leave optimizations of terminal baudrate on the user)

Sat Dec 08 2001  Vitezslav Samel <samel@mail.cz>
	* configure.ac, tty.c:
	make joe compilable (not only) on cygwin - check if siginterrupt() is
	available on this host

Sat Dec 08 2001  Vitezslav Samel <samel@mail.cz>
	* ublock.c:
	remove feature: exchange points of start and end of the block when
	checking validity of block pointers

Sat Dec 08 2001  Vitezslav Samel <samel@mail.cz>
	* rc.c:
	change indentation of initialization of pdefault, fdefault
	and glopts arrays; add comments to [pf]default struct members

Sat Dec 01 2001  Vitezslav Samel <samel@mail.cz>
	* configure.ac, path.c, path.h, tty.c, tty.h:
	move pwd() into path.c; check in autoconf if we have at least one
	of getcwd() / getwd()
