@@ -59,7 +59,7 @@ AC_CHECK_SIZEOF(void *, 4)
 AC_PROG_GCC_TRADITIONAL
 AC_FUNC_LSTAT
 AC_FUNC_MALLOC
-AC_FUNC_SETPGRP
+joe_SETPGRP
 AC_TYPE_PID_T
 AC_TYPE_SIZE_T
 AC_CHECK_TYPE([ssize_t], [], [
