@@ -1,3 +1,7 @@
+Wed Dec 12 2001  Vitezslav Samel <samel@mail.cz>
+	* acinclude.m4, configure.ac:
+	use our own joe_SETPGRP macro (autoconf's is broken for *BSD)
+
 Tue Dec 11 2001  Vitezslav Samel <samel@mail.cz>
 	* configure.ac, path.c:
 	include <limits.h> if available to get PATH_MAX
